--- a/틱택토.html
+++ b/틱택토.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>틱택토게임</title>
     <style>
        td {
            border : 1px solid black;
@@ -36,7 +36,6 @@
     </table>
     <div class="result"></div>
 
-    <script src = "https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script>
         let array = [];
         let array2 = [];
