가위바위보 게임 수정

--- a/가위바위보/가위바위보.html
+++ b/가위바위보/가위바위보.html
@@ -9,7 +9,7 @@
         #choice {
             width : 290px;
             height: 350px;
-            background: url('./img/good.jpeg') 0 0;
+            background: url('../img/good.jpeg') 0 0;
         }
     </style>
 </head>
