--- a/자스스톤/자스스톤.html
+++ b/자스스톤/자스스톤.html
@@ -119,6 +119,10 @@
             <div class="card-hp"></div>
         </div>
     </div>
+    <div>
+        빨강이 체력, 노랑이 공격력, 적 영웅의 체력이 0이되면 승리!
+        영웅을 보호하기 위해 쫄병들을 코스트(파란색) 내에서 뽑을 수 있음.
+    </div>
     <script src="./자스스톤.js"></script>
 </body>
 </html>
