--- a/테트리스/테트리스.html
+++ b/테트리스/테트리스.html
@@ -11,11 +11,12 @@
         }
         .next-table {
             position: absolute;
-            right: 10px;
+            left: 400px;
             top: 10px;
         }
         .tetris td {
             border: 1px solid black;
+            /* background-color: black; */
             width: 30px;
             height: 30px;
         }
